--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -2,8 +2,8 @@ version: v1.0
 name: Semaphore JavaScript Example Pipeline
 agent:
   machine:
-    type: e1-standard-2
-    os_image: ubuntu1804
+    type: f1-standard-2
+    os_image: ubuntu2004
 blocks:
   - name: "\U0001F4E6 Install dependencies"
     task:
